--- a/index.html
+++ b/index.html
@@ -11,9 +11,37 @@
 </head>
 
 <body>
-<h1>hi
-    
-</h1>
+    <!-- Start main-page  -->
+    <!-- End main-page  -->
+
+
+    <!-- Start Tech  -->
+    <!-- End Tech  -->
+
+
+    <!-- Start Service  -->
+    <!-- End Service -->
+
+
+    <!-- Start Testmonials  -->
+    <!-- End Testmonials  -->
+
+
+    <!-- Start Pricing  -->
+    <!-- End Pricing  -->
+
+
+    <!-- Start About Us  -->
+    <!-- End About Us -->
+
+
+    <!-- Start Contact Us  -->
+    <!-- End Contact Us -->
+
+
+    <!-- Start Footer  -->
+    <!-- End Footer -->
+
 </body>
 
 </html>
