added main page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,40 @@
 </head>
 
 <body>
+    <div class="parent">
+        <div class="video-bck">
+            <video src="C:\Users\Ahmed Salah\Downloads\Ieee Hachkthon\IEEE-Hackthon\images\Simple IoT for Smart Cities 11-12.mp4" autoplay muted loop></video>
+        </div>
+        
+        <div class="container">
+            
     <!-- Start main-page  -->
-    <!-- End main-page  -->
+   <!-- start nav  -->
+<nav>
+    <div class="logo">
+        logo
+    </div>
+<div class="links">
+    <ul>
+        <li><a href="#technology">technology</a>     </li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li> <a href="#pricing">Pricing</a></li>
+        <li><a href="#about us">About Us</a></li>
+    </ul>
+    <button class="contact-btn btn">
+        <a href="#contact">Contact Us</a>
+    </button>
+</div>
+</nav>
+<!-- end nav  -->
 
+<div class="text-container">
+    <h2> JM city</h2>
+    <p> is a data-driven ecosystem powered by proprietary spatial  intelligence technology.</p>
+</div>
+    <!-- End main-page  -->
+</div>
 
     <!-- Start Tech  -->
     <!-- End Tech  -->
@@ -41,7 +72,7 @@
 
     <!-- Start Footer  -->
     <!-- End Footer -->
-
+</div>
 </body>
 
 </html>
