edited main page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="parent">
         <div class="video-bck">
-            <video src="C:\Users\Ahmed Salah\Downloads\Ieee Hachkthon\IEEE-Hackthon\images\Simple IoT for Smart Cities 11-12.mp4" autoplay muted loop></video>
+            <video src="../IEEE-Hackthon/images/Simple IoT for Smart Cities 11-12.mp4" autoplay muted loop></video>
         </div>
         
         <div class="container">
