--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <div class="title">
                 <h2>Technology</h2>
                 <p>Unleashing innovation with IoT, AI, & sustainability. A connected urban experience awaits in our
-                    Smart City project.</p>
+                    Smart
+                    City project.</p>
             </div>
             <div class="corner" id="services"><svg xmlns="http://www.w3.org/2000/svg" width="122" height="96"
                     viewBox="0 0 122 96" fill="none">
@@ -95,25 +96,27 @@
 
                         <h3>IoT Sensors</h3>
                         <p>These are small devices that collect data from the environment, such as air quality,
-                            temperature, humidity, noise levels, traffic flow, and waste management. IoT sensors
-                            provide real-time data, which is crucial for decision-making and optimizing city
-                            operations.</p>
+                            temperature,
+                            humidity, noise levels, traffic flow, and waste management. IoT sensors provide real-time
+                            data,
+                            which is crucial for decision-making and optimizing city operations.</p>
                     </div>
                     <div class="buildings">
-                        <img src="/images/Star 1.png">
+                        <img src=" /images/Star 1.png">
                     </div>
                 </div>
                 <div class="second">
 
                     <div class="buildings">
-                        <img src="/images/Star 1.png">
+                        <img src=" /images/Star 1.png">
                     </div>
                     <div class="textarea">
                         <i class="fa-solid fa-cube"></i>
 
                         <h3>Fully Mobil control</h3>
-                        <p> Enable cm-level accuracy with high robustness. It takes only milliseconds from camera
-                            open to the first pose.</p>
+                        <p> Enable cm-level accuracy with high robustness. It takes only milliseconds from camera open
+                            to
+                            the first pose.</p>
                     </div>
                 </div>
                 <div class="third">
@@ -121,23 +124,22 @@
                         <i class="fa-solid fa-cube"></i>
 
                         <h3>Data freshness</h3>
-                        <p>The digital space is updated frequently to reflect changes in the physical environment.
-                        </p>
+                        <p>The digital space is updated frequently to reflect changes in the physical environment.</p>
                     </div>
                     <div class="buildings">
-                        <img src="/images/Star 1.png">
+                        <img src=" /images/Star 1.png">
                     </div>
                 </div>
                 <div class="forth">
                     <div class="buildings">
-                        <img src="/images/Star 1.png">
+                        <img src=" /images/Star 1.png">
                     </div>
                     <div class="textarea">
                         <i class="fa-solid fa-cube"></i>
 
                         <h3>complete tool system</h3>
-                        <p> We provide suitable tools for both technical and non-technical employees working with
-                            the ecosystem, greatly improving their efficiency.</p>
+                        <p> We provide suitable tools for both technical and non-technical employees working with the
+                            ecosystem, greatly improving their efficiency.</p>
                     </div>
                 </div>
 
@@ -148,7 +150,7 @@
 
 
     <!-- Start Service  -->
-    <section class="serv">
+    <section class="serv" id="servicess">
         <div class="container" id="service">
             <!-- title  -->
             <div class="title">
@@ -256,25 +258,232 @@
 
 
     <!-- Start Testmonials  -->
+    <section id="testimonials">
+        <div class="container">
+            <div class="title">
+                <h2>testemonials</h2>
+                <p>Hear from our delighted residents and businesse <span class="white-span">s. Discover</span> how our
+                    Smart
+                    City is transforming live <span class="white-span">s.</span></p>
+            </div>
+            <div class="corner" id="services"><svg xmlns="http://www.w3.org/2000/svg" width="122" height="96"
+                    viewBox="0 0 122 96" fill="none">
+                    <path
+                        d="M11 13.1218C16.0995 10.8553 21.9555 11.0019 27.4092 11.0019C36.9092 11.0019 46.4093 11.0019 55.9093 11.0019C76.3407 11.0019 93.9412 18.8899 104.862 36.6364C107.808 41.4241 108.874 48.1383 110.201 53.5951C111.207 57.7322 111.339 61.7238 111.339 65.9609C111.339 72.3728 111.339 78.7847 111.339 85.1966"
+                        stroke="#F39C12" stroke-width="20" stroke-linecap="round" />
+                </svg></div>
+            <div class="test-cards">
+                <div class="one1">
+                    <div class="portfolio">
+                        <img src=" /images/unsplash_ILip77SbmOE.png">
+                    </div>
+                    <h3>Mostafa Salah</h3>
+                    <span class="job">Software Engineer</span>
+                    <div class="rate">
+                        <div class="e1"> <i class=" filled fas fa-star"></i></div>
+                        <div class="e2"> <i class=" filled fas fa-star"></i></div>
+                        <div class="e3"> <i class="filled fas fa-star"></i></div>
+                        <div class="e4"> <i class="filled fas fa-star"></i></div>
+                        <div class="e5"> <i class="filled far fa-star"></i></div>
+                    </div>
+                    <p>Nice work from this firm. i would definetly recommend it to my acquaintances.</p>
+                </div>
+                <div class="two2">
+                    <div class="portfolio">
+                        <img src=" /images/man.png">
+                    </div>
+                    <h3>Youssef Ahmed</h3>
+                    <span class="job">Mechanical Engineer</span>
+                    <div class="rate">
+                        <div class="e1"> <i class=" filled fas fa-star"></i></div>
+                        <div class="e2"> <i class=" filled fas fa-star"></i></div>
+                        <div class="e3"> <i class="filled fas fa-star"></i></div>
+                        <div class="e4"> <i class="filled fas fa-star"></i></div>
+                        <div class="e5"> <i class="filled fas fa-star"></i></div>
+                    </div>
+                    <p>It was an honor working with these people. i am glad approaching them before going to other firm.
+                    </p>
+                </div>
+
+                <div class="three3">
+                    <div class="portfolio">
+                        <img src=" /images/man2.png">
+                    </div>
+                    <h3>Ahmed Osama</h3>
+                    <span class="job">orthodentist</span>
+                    <div class="rate">
+                        <div class="e1"> <i class=" filled fas fa-star"></i></div>
+                        <div class="e2"> <i class=" filled fas fa-star"></i></div>
+                        <div class="e3"> <i class="filled fas fa-star"></i></div>
+                        <div class="e4"> <i class="filled fas fa-star"></i></div>
+                        <div class="e5"> <i class="filled fas fa-star"></i></div>
+                    </div>
+                    <p>A lot of people told me that this firm won’t acheive my expectations but they were behind my
+                        expectation.</p>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        </div>
+    </section>
     <!-- End Testmonials  -->
 
 
     <!-- Start Pricing  -->
-    <!-- End Pricing  -->
+    <section id="pricing">
+        <div class="container">
+            <div class="title">
+                <h2>Pricing</h2>
+                <p class="diff">Discover affordability & flexibility in <span class="white-span">our Smart</span> City
+                    plans. Choose your ideal subs <span class="white-span">cription for</span> enhanced living.</p>
+            </div>
+            <div class="corner" id="services"><svg xmlns="http://www.w3.org/2000/svg" width="122" height="96"
+                    viewBox="0 0 122 96" fill="none">
+                    <path
+                        d="M11 13.1218C16.0995 10.8553 21.9555 11.0019 27.4092 11.0019C36.9092 11.0019 46.4093 11.0019 55.9093 11.0019C76.3407 11.0019 93.9412 18.8899 104.862 36.6364C107.808 41.4241 108.874 48.1383 110.201 53.5951C111.207 57.7322 111.339 61.7238 111.339 65.9609C111.339 72.3728 111.339 78.7847 111.339 85.1966"
+                        stroke="#229C3D" stroke-width="20" stroke-linecap="round" />
+                </svg></div>
+            <div class="subs">
+                <div class="o1">
+                    <div class="plan">
+                        <div class="text-p">
+                            <h4>starter</h4>
+                            <h3>$75k</h3>
+                            <h5>per year</h5>
+                        </div>
+                        <i class="fa-regular fa-compass"></i>
+                    </div>
+                    <div class="advantages">
+                        <h5>300G Internet</h5>
+
+                        <h5>Starter Membership</h5>
+                        <h5>Smart Home</h5>
+                        <i class="gg fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gk fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gh fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <button class="pricing-btn">
+                            subscribe
+                        </button>
+                    </div>
 
 
-    <!-- Start About Us  -->
-    <!-- End About Us -->
+                </div>
+                <div class="o2">
+
+                    <div class="plan">
+                        <div class="text-p">
+                            <h4>Basic</h4>
+                            <h3>$90k</h3>
+                            <h5>per year</h5>
+                        </div>
+                        <i class="fa-regular fa-compass"></i>
+                    </div>
+                    <div class="advantages">
+                        <h5>Unlimited Internet</h5>
+
+                        <h5>basic Membership</h5>
+                        <h5>Smart Home</h5>
+                        <h5>Smart Garden</h5>
+                        <i class="gg fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gk fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gh fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gr fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <button class="pricing-btn">
+                            subscribe
+                        </button>
+                    </div>
+
+                </div>
+                <div class="o3">
+
+                    <div class="plan">
+                        <div class="text-p">
+                            <h4>Professinal</h4>
+                            <h3>$105k</h3>
+                            <h5>per year</h5>
+                        </div>
+                        <i class="fa-regular fa-compass"></i>
+                    </div>
+                    <div class="advantages">
+
+                        <h5>Ulimited Internet</h5>
+                        <h5>Free delivery</h5>
+                        <h5> Membership</h5>
+                        <h5>Smart Home</h5>
+                        <h5>Smart Garden</h5>
+                        <i class="gg fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gk fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gh fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gr fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <i class="gp fa-solid fa-circle-check" style="color: #229c3d;"></i>
+                        <button class="pricing-btn">
+                            subscribe
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <!-- End Pricing  -->
 
 
-    <!-- Start Contact Us  -->
-    <!-- End Contact Us -->
+        <!-- Start About Us  -->
+        <section id="about-us">
+            <div class="container">
+                <div class="title">
+                    <h2>About Us</h2>
+                    <p>some information about our Achievements and Brief to our history</p>
+                </div>
+                <div class="corner" id="services"><svg xmlns="http://www.w3.org/2000/svg" width="122" height="96"
+                        viewBox="0 0 122 96" fill="none">
+                        <path
+                            d="M11 13.1218C16.0995 10.8553 21.9555 11.0019 27.4092 11.0019C36.9092 11.0019 46.4093 11.0019 55.9093 11.0019C76.3407 11.0019 93.9412 18.8899 104.862 36.6364C107.808 41.4241 108.874 48.1383 110.201 53.5951C111.207 57.7322 111.339 61.7238 111.339 65.9609C111.339 72.3728 111.339 78.7847 111.339 85.1966"
+                            stroke="#FF6F61" stroke-width="20" stroke-linecap="round" />
+                    </svg></div>
+                <div class="info">
+                    <div class="text-about">
+                        <p>
+                            <span>JM</span> is startup building the infrastructure of an AR met averse, which projects
+                            on
+                            the Earth. It’ll enable hyper-scale MMO games social apps to be built on real-world by
+                            integrating core technologies
+                        </p>
+                        <button class="abo-btn">
+                            Learn More
+                        </button>
+                    </div>
+                    <div class="boxes">
+                        <div class="box1">
+                            <h4> 50+</h4>
+                            <h5>completed projects</h5>
+                        </div>
+                        <div class="box2">
+                            <h4> 12+</h4>
+                            <h5>On Going Projects</h5>
+                        </div>
+                        <div class="box3">
+                            <h4> 1200+</h4>
+                            <h5>Happy Clients</h5>
+                        </div>
+                        <div class="box4">
+                            <h4> 3+</h4>
+                            <h5>Office Out GLOB</h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- End About Us -->
 
 
-    <!-- Start Footer  -->
-    <!-- End Footer -->
-    </div>
-    <script src="/Js/script.js"></script>
+                <!-- Start Contact Us  -->
+                <!-- End Contact Us -->
+
+
+                <!-- Start Footer  -->
+                <!-- End Footer -->
+                <script src="/Js/script.js"></script>
 </body>
 
 </html>
