--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     <li><a href="#services">Services</a></li>
                                     <li><a href="#testimonials">Testimonials</a></li>
                                     <li> <a href="#pricing">Pricing</a></li>
-                                    <li><a href="#about us">About Us</a></li>
+                                    <li><a href="#about-us">About Us</a></li>
                                 </ul>
                             </div>
                         </div>
