--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="parents">
         <div class="video-bck">
-            <video src="/images/main-video.mp4" autoplay muted loop></video>
+            <video src="https://youtu.be/J-tynFzlXwA" autoplay muted loop></video>
         </div>
 
         <div class="container">
