--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                         the Earth. It’ll enable hyper-scale MMO games social apps to be built on real-world by
                         integrating core technologies
                     </p>
-                    <a href="/about-us.html">
+                    <a href="about-us.html">
                         <button class="abo-btn">
                             Learn More
                         </button>
